2007-01-23  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: The libreadline checks got mangled. Bad patch?
	This fixes the breakage, and adds a warning if gd.h is not found.

	* PATCHLEVEL src/version.c configure.in:
	Tag and package as release candidate 4.2-rc4

2007-01-22  Ethan Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL src/version.c configure.in:
	Tag and package as release candidate 4.2-rc3

2007-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* configure.in: Let the GNU readline be the default instead of the
	built-in readline. Improved messages for --with-readline.

2007-01-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot3d.c (plot3drequest): Deactive splot_map when reading [y1:y2]
	argument of splot. Fixes axis reversal of set view map;splot [] [y1:y2].

2007-01-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Better title for plots with scans forward and
	backward.

2007-01-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (pr_encoding) term/x11.trm share/Gnuplot.app-defaults:
	Gnuplot_x11 has been using a default encoding *-* for x11 fonts. There
	is a bug in xorg-7.1 that causes this to fail. So we now provide an
	optional X-resource that can be used to set the default encoding to
	something else.  E.g.:
	    echo "gnuplot*encoding: iso8859-15" | xrdb -merge

2007-01-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Update current color in 
	plot->current_rgb when setting color from a Palette. Bugfix.

2007-01-09  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.texi: Sync with current docs

2007-01-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Add error return check after calling gdImageCreate. This
	was not a useful check in earlier versions of libgd, but 2.0.34 will
	introduce serious sanity checking at the time of image creation.

2006-12-31  Ethan Merritt  <merritt@u.washington.edu>
