@@ -1,3 +1,10 @@
+2007-01-24  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/hidden3d.c (build_networks): Add checks in the hidden3d code to
+	cleanly skip empty plots.  This fix went into the trunk CVS 2 months
+	ago, but apparently is needed in 4.2 also (test case provided by a
+	user).
+
 2007-01-23  Ethan Merritt  <merritt@u.washington.edu>
 
 	* configure.in: The libreadline checks got mangled. Bad patch?
